core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select_aggregate__single_measurement__stddev-2.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT STDDEV(i64_field) FROM data\")"
---
Sort: time ASC NULLS LAST [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None), stddev:Float64;N]
  Projection: Dictionary(Int32, Utf8("data")) AS iox::measurement, TimestampNanosecond(0, None) AS time, stddev(data.i64_field) AS stddev [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None), stddev:Float64;N]
    Filter: __aggr_count > Int64(0) [stddev(data.i64_field):Float64;N, __aggr_count:Int64]
      Aggregate: groupBy=[[]], aggr=[[stddev(data.i64_field), count(Int64(1)) AS __aggr_count]] [stddev(data.i64_field):Float64;N, __aggr_count:Int64]
        Filter: data.i64_field IS NOT NULL [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, None), with space:Float64;N]
          TableScan: data [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, None), with space:Float64;N]
