core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select_aggregate__single_measurement__sum-5.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT SUM(f64_field) FROM data GROUP BY foo\")"
---
Sort: foo ASC NULLS LAST, time ASC NULLS LAST [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None), foo:Dictionary(Int32, Utf8);N, sum:Float64;N]
  Projection: Dictionary(Int32, Utf8("data")) AS iox::measurement, TimestampNanosecond(0, None) AS time, data.foo AS foo, sum(data.f64_field) AS sum [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None), foo:Dictionary(Int32, Utf8);N, sum:Float64;N]
    Aggregate: groupBy=[[data.foo]], aggr=[[sum(data.f64_field)]] [foo:Dictionary(Int32, Utf8);N, sum(data.f64_field):Float64;N]
      Filter: data.f64_field IS NOT NULL [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, None), with space:Float64;N]
        TableScan: data [TIME:Boolean;N, bar:Dictionary(Int32, Utf8);N, bool_field:Boolean;N, f64_field:Float64;N, foo:Dictionary(Int32, Utf8);N, i64_field:Int64;N, mixedCase:Float64;N, str_field:Utf8;N, time:Timestamp(Nanosecond, None), with space:Float64;N]
